# cpp_project_with_errors

./: .ci.yaml  .decent_ci-Linux.yaml  .decent_ci.yaml  CMakeLists.txt  Doxyfile.in  description.txt  license.txt  readme.md
ext/test/: CMakeLists.txt  ext_test.cpp
include/cpp_project_with_errors/: cpp_proj.hpp
src/: NewFile.cpp  crash_test.cpp  fail_test.cpp  link.cpp  main.cpp  message_test.cpp  timeout_test.cpp  warning_test.cpp
